feat(SP3.003): add group_vars and host_vars for ZooKeeper and Kafka brokers
- Extended group_vars/zookeeper.yml with ensemble config (tickTime, initLimit, etc.)
- Extended group_vars/kafka_broker.yml with broker config, security flags, tiered storage, self-balancing, ACL flags
- Created ansible/host_vars/ directory with per-host zookeeper_myid and kafka_broker_id/rack
- ZK nodes: zk-01 (myid=1), zk-02 (myid=2), zk-03 (myid=3)
- Kafka brokers: kb-01 (id=1, rack=1/AZ1), kb-02 (id=2, rack=2/AZ2), kb-03 (id=3, rack=1/AZ1)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>